--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
           odio aut dicta reprehenderit dolore voluptatem?
         </p>
       </section>
-      <section id="contact"></section>
+      <section id="contact">
+        <h2>contact us</h2>
+      </section>
       <section id="testomonials"></section>
     </main>
   </body>
