--- a/index.html
+++ b/index.html
@@ -46,5 +46,8 @@
       </section>
       <section id="testomonials"></section>
     </main>
+    <footer>
+        <h3>footer</h3>
+    </footer>
   </body>
 </html>
