--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul>
           <li><a href="#">home</a></li>
           <li><a href="#">about</a></li>
-          <li><a href="#">service</a></li>
+          <li><a href="#">service</a></li>gi
           <li><a href="#">contact</a></li>
           <li><a href="#">testomonials</a></li>
         </ul>
